[gd_scene load_steps=7 format=3 uid="uid://8x6uwy2ygtl1"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_0b8va"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qf6e8"]
bg_color = Color(0, 0, 0, 0.509804)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uovh2"]
bg_color = Color(0.864333, 1, 0.78, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_icdd8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3ixw"]
bg_color = Color(1, 1, 1, 0.537255)

[sub_resource type="ImageTexture" id="ImageTexture_4lql3"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_0b8va")

[node name="Stamina" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="LabelStamina" type="Label" parent="Stamina"]
layout_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 41.0
offset_top = -74.0
offset_right = 105.0
offset_bottom = -48.0
grow_vertical = 0
text = "Stamina"

[node name="ProgressBarStamina" type="ProgressBar" parent="Stamina"]
layout_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 116.0
offset_top = -70.0
offset_right = 307.0
offset_bottom = -52.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_qf6e8")
theme_override_styles/fill = SubResource("StyleBoxFlat_uovh2")
max_value = 15.0
value = 7.0
show_percentage = false

[node name="ProgressBarStaminaRefill" type="ProgressBar" parent="Stamina"]
layout_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 116.0
offset_top = -70.0
offset_right = 307.0
offset_bottom = -52.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_icdd8")
theme_override_styles/fill = SubResource("StyleBoxFlat_g3ixw")
max_value = 15.0
value = 11.04
show_percentage = false

[node name="Items" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="ItemsInfo" type="Label" parent="Items"]
layout_mode = 0
offset_left = -112.0
offset_top = -38.0
offset_right = -35.0
offset_bottom = -15.0
text = "Items: 0/6"

[node name="Photos" type="VBoxContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -344.0
offset_right = -33.0
offset_bottom = 256.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.862, 1)

[node name="TextureRect" type="TextureRect" parent="Photos"]
layout_mode = 2
texture = SubResource("ImageTexture_4lql3")
expand_mode = 4

[node name="ColorRect" type="ColorRect" parent="Photos/TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="Photos"]
layout_mode = 2
texture = SubResource("ImageTexture_4lql3")
expand_mode = 4

[node name="ColorRect" type="ColorRect" parent="Photos/TextureRect2"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect3" type="TextureRect" parent="Photos"]
layout_mode = 2
texture = SubResource("ImageTexture_4lql3")
expand_mode = 4

[node name="ColorRect" type="ColorRect" parent="Photos/TextureRect3"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect4" type="TextureRect" parent="Photos"]
layout_mode = 2
texture = SubResource("ImageTexture_4lql3")
expand_mode = 4

[node name="ColorRect" type="ColorRect" parent="Photos/TextureRect4"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect5" type="TextureRect" parent="Photos"]
layout_mode = 2
texture = SubResource("ImageTexture_4lql3")
expand_mode = 4

[node name="ColorRect" type="ColorRect" parent="Photos/TextureRect5"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
